[package]
name = "borkcraftclient"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.60"
publish = false

[dependencies]
eframe = { version = "0.19.0" }
reqwest = {version = "0.11.11", features = ["blocking"]}
egui_extras = { version = "0.19.0", features = ["image"]}
rfd = "0.10.0"

serde = { version = "1.0" }
serde_json = "1.0"
serde_derive = "1.0"
serde_with = { version = "1.4.0", features = ["json"]}

ureq = { version = " 2.5.0", features =["json"]}
ehttp = "0.2.0"
image = { version = "0.24", features = ["jpeg", "png"] }
poll-promise = "0.1.0"
